cmake_minimum_required(VERSION 3.12)
project(clion_p1)

set(CMAKE_CXX_STANDARD 14)

add_executable(clion_p1 main.cpp )

include_directories(c1_time_complexity)
add_executable(c1_1 c1_time_complexity/c2_1.cpp)
add_executable(c1_2 c1_time_complexity/MyAlgorithmTester.h c1_time_complexity/MyUtil.h c1_time_complexity/time_complexity_trail.cpp)
add_executable(c1_3 c1_time_complexity/recurrent_complexity.cpp)
add_executable(c1_4 c1_time_complexity/dynamic_array.cpp)

add_executable(c2_1 c2_sort/sort-algorithms.cpp)
add_executable(c2_2 c2_sort/quick_sort_algorithm.cpp)
add_executable(c2_3 c2_sort/merge_sort_algorithm.cpp)
add_executable(L75 c2_sort/L75-m.cpp)
add_executable(L621 c2_sort/L621-m.cpp)

add_executable(L4 c3_array/L4-h.cpp)
add_executable(L48 c3_array/L48-m.cpp)
add_executable(L54 c3_array/L54-m.cpp)
add_executable(L59 c3_array/L59-m.cpp)
add_executable(L169 c3_array/L169.cpp)
add_executable(L238 c3_array/L238-m.cpp)
add_executable(L380 c3_array/L380-m.cpp)
add_executable(L448 c3_array/L448.cpp)

add_executable(L1 c4_hash/L1.cpp)
add_executable(L49 c4_hash/L49-m.cpp)
add_executable(L128 c4_hash/L128-h.cpp)
add_executable(L136 c4_hash/L136.cpp)
add_executable(L146 c4_hash/L146-m.cpp)
add_executable(L217 c4_hash/L217.cpp)
add_executable(L219 c4_hash/L219-220.cpp)
add_executable(L349 c4_hash/L349.cpp)
add_executable(L350 c4_hash/L350.cpp)
add_executable(L454 c4_hash/L454.cpp)
add_executable(L560 c4_hash/L560-m.cpp)

add_executable(L2 c5_linkedlist/L2-m.cpp)
add_executable(L19 c5_linkedlist/L19.cpp)
add_executable(L21 c5_linkedlist/L21.cpp)
add_executable(L23 c5_linkedlist/L23-h.cpp)
add_executable(L24 c5_linkedlist/L24.cpp)
add_executable(L61 c5_linkedlist/L61-m.cpp)
add_executable(L141 c5_linkedlist/L141.cpp)
add_executable(L142 c5_linkedlist/L142-m.cpp)
add_executable(L148 c5_linkedlist/L148-m.cpp)
add_executable(L160 c5_linkedlist/L160.cpp)
add_executable(L203 c5_linkedlist/L203.cpp)
add_executable(L206 c5_linkedlist/L206.cpp)
add_executable(L237 c5_linkedlist/L237.cpp)

add_executable(queue_3 c6_stack_queue/queue_3.cpp)
add_executable(L20 c6_stack_queue/L20.cpp)
add_executable(L84 c6_stack_queue/L84-h.cpp)
add_executable(L102 c6_stack_queue/L102.cpp)
add_executable(L155 c6_stack_queue/L155.cpp)
add_executable(L215 c6_stack_queue/L215.cpp)
add_executable(L227 c6_stack_queue/L227-m.cpp)
add_executable(L295 c6_stack_queue/L295-m.cpp)
add_executable(L347 c6_stack_queue/L347-m.cpp)
add_executable(L394 c6_stack_queue/L394-m.cpp)
add_executable(L557 c6_stack_queue/L557.cpp)
add_executable(L739 c6_stack_queue/L739-m.cpp)

add_executable(c7_1 c7_binaryTree_recurrent/bianli_tree.cpp)
add_executable(c7_2 c7_binaryTree_recurrent/binaryTree_2.cpp)
add_executable(c7_3 c7_binaryTree_recurrent/use_stack_bianli_tree.cpp)
add_executable(L98 c7_binaryTree_recurrent/L98-m.cpp)
add_executable(L101 c7_binaryTree_recurrent/L101-226.cpp)
add_executable(L104 c7_binaryTree_recurrent/L104.cpp)
add_executable(L114 c7_binaryTree_recurrent/L114-m.cpp)
add_executable(L124 c7_binaryTree_recurrent/L124-h.cpp)
add_executable(L208 c7_binaryTree_recurrent/L208-m.cpp)
add_executable(L230 c7_binaryTree_recurrent/L230-m.cpp)
add_executable(L235 c7_binaryTree_recurrent/L235.cpp)
add_executable(L236 c7_binaryTree_recurrent/L236-m.cpp)
add_executable(L538 c7_binaryTree_recurrent/L538.cpp)
add_executable(L617 c7_binaryTree_recurrent/L617.cpp)

add_executable(L17 c8_recurrent_backtrack/L17-m.cpp)
add_executable(L31 c8_recurrent_backtrack/L31-m.cpp)
add_executable(L46 c8_recurrent_backtrack/L46-m.cpp)
add_executable(L51 c8_recurrent_backtrack/L51.cpp)
add_executable(L77 c8_recurrent_backtrack/L77.cpp)
add_executable(L78 c8_recurrent_backtrack/L78-m.cpp)
add_executable(L79 c8_recurrent_backtrack/L79-m.cpp)
add_executable(L200 c8_recurrent_backtrack/L200.cpp)

add_executable(c9_1 c9_dynamic_plan/dp_practice2.cpp)
add_executable(L5 c9_dynamic_plan/L5-m.cpp)
add_executable(L39 c9_dynamic_plan/L39-m.cpp)
add_executable(L53 c9_dynamic_plan/L53.cpp)
add_executable(L62 c9_dynamic_plan/L62-m.cpp)
add_executable(L64 c9_dynamic_plan/L64-m.cpp)
add_executable(L70 c9_dynamic_plan/L70.cpp)
add_executable(L72 c9_dynamic_plan/L72-h.cpp)
add_executable(L85 c9_dynamic_plan/L85-h.cpp)
add_executable(L89 c9_dynamic_plan/L89-m.cpp)
add_executable(L91 c9_dynamic_plan/L91-m.cpp)
add_executable(L96 c9_dynamic_plan/L96-m.cpp)
add_executable(L139 c9_dynamic_plan/L139-m.cpp)
add_executable(L152 c9_dynamic_plan/L152-m.cpp)
add_executable(L198 c9_dynamic_plan/L198.cpp)
add_executable(L221 c9_dynamic_plan/L221-m.cpp)
add_executable(L279 c9_dynamic_plan/L279-m.cpp)
add_executable(L300 c9_dynamic_plan/L300.cpp)
add_executable(L322 c9_dynamic_plan/L322-m.cpp)
add_executable(L338 c9_dynamic_plan/L338-m.cpp)
add_executable(L343 c9_dynamic_plan/L343.cpp)
add_executable(L416 c9_dynamic_plan/L416-m.cpp)
add_executable(L647 c9_dynamic_plan/L647-m.cpp)
add_executable(L1143 c9_dynamic_plan/L1143.cpp)

add_executable(c10_1 c10_erfen/binary_search.cpp)
add_executable(L33 c10_erfen/L33-m.cpp)
add_executable(L34 c10_erfen/L34-m.cpp)
add_executable(L69 c10_erfen/L69.cpp)
add_executable(L378 c10_erfen/L378-m.cpp)
add_executable(L704 c10_erfen/L704_fib_climbstairs.cpp)

add_executable(L55 c11_greedy/L55-m.cpp)
add_executable(L56 c11_greedy/L56-m.cpp)
add_executable(L122 c11_greedy/L122.cpp)
add_executable(L581 c11_greedy/L581.cpp)

add_executable(L7 c12_math_problem/L7.cpp)
add_executable(L9 c12_math_problem/L9.cpp)
add_executable(L43 c12_math_problem/L43.cpp)

add_executable(L3 c13_slide_window/L3-m.cpp)
add_executable(L76 c13_slide_window/L76-h.cpp)
add_executable(L209 c13_slide_window/L209.cpp)
add_executable(L395 c13_slide_window/L395-m.cpp)
add_executable(L438 c13_slide_window/L438-m.cpp)
add_executable(L904 c13_slide_window/L904-m.cpp)

add_executable(L22 c14_graph/L22-m.cpp)
add_executable(L207 c14_graph/L207-m.cpp)
add_executable(L279-g c14_graph/L279-G.cpp)

add_executable(L8 c15_string_topic/L8.cpp)
add_executable(L14 c15_string_topic/L14.cpp)
add_executable(L151 c15_string_topic/L151.cpp)

add_executable(L11 c16_two_points/L11-m.cpp)
add_executable(L15 c16_two_points/L15-m.cpp)
add_executable(L16 c16_two_points/L16-m.cpp)
add_executable(L88 c16_two_points/L88.cpp)
add_executable(L125 c16_two_points/L125.cpp)
add_executable(L167 c16_two_points/L167.cpp)
add_executable(L283 c16_two_points/L283.cpp)
add_executable(L287 c16_two_points/L287-m.cpp)
add_executable(L344 c16_two_points/L344.cpp)
add_executable(L345 c16_two_points/L345.cpp)
add_executable(L524 c16_two_points/L524-m.cpp)
add_executable(L633 c16_two_points/L633.cpp)
add_executable(L680 c16_two_points/L680.cpp)

add_executable(L231 c17_bit_calculate/L231.cpp)

add_executable(L121 c18_stock_topic/L121.cpp)

