cmake_minimum_required(VERSION 3.12)
project(clion_p1)

set(CMAKE_CXX_STANDARD 14)

add_executable(clion_p1 main.cpp )

include_directories(c0_time_complexity)
add_executable(c1_1 c0_time_complexity/c2_1.cpp)
add_executable(c1_2 c0_time_complexity/MyAlgorithmTester.h c0_time_complexity/MyUtil.h c0_time_complexity/time_complexity_trail.cpp)
add_executable(c1_3 c0_time_complexity/recurrent_complexity.cpp)
add_executable(c1_4 c0_time_complexity/dynamic_array.cpp)

add_executable(c2_1 c1_sort/sort-algorithms.cpp)
add_executable(c2_2 c1_sort/quick_sort_algorithm.cpp)
add_executable(c2_3 c1_sort/merge_sort_algorithm.cpp)
add_executable(L75 c1_sort/L75-m.cpp)
add_executable(L315 c1_sort/L315-h.cpp)
add_executable(L451 c1_sort/L451-m.cpp)
add_executable(L621 c1_sort/L621-m.cpp)

add_executable(L26 c2_array/L26.cpp)
add_executable(L169 c2_array/L169.cpp)
add_executable(L189 c2_array/L189.cpp)
add_executable(L238 c2_array/L238-m.cpp)
add_executable(L268 c2_array/L268.cpp)
add_executable(L380 c2_array/L380-m.cpp)
add_executable(L384 c2_array/L384-m.cpp)
add_executable(L448 c2_array/L448.cpp)
add_executable(L565 c2_array/L565-m.cpp)
add_executable(L645 c2_array/L645.cpp)
add_executable(L667 c2_array/L667-m.cpp)
add_executable(L697 c2_array/L697.cpp)
add_executable(L769 c2_array/L769-m.cpp)


add_executable(L1 c3_hash/L1.cpp)
add_executable(L13 c3_hash/L13.cpp)
add_executable(L36 c3_hash/L36-m.cpp)
add_executable(L38 c3_hash/L38.cpp)
add_executable(L49 c3_hash/L49-m.cpp)
add_executable(L128 c3_hash/L128-h.cpp)
add_executable(L217 c3_hash/L217.cpp)
add_executable(L219 c3_hash/L219.cpp)
add_executable(L220 c3_hash/L220-m.cpp)
add_executable(L242 c3_hash/L242.cpp)
add_executable(L349 c3_hash/L349.cpp)
add_executable(L350 c3_hash/L350.cpp)
add_executable(L387 c3_hash/L387.cpp)
add_executable(L409 c3_hash/L409.cpp)
add_executable(L412 c3_hash/L412.cpp)
add_executable(L454 c3_hash/L454.cpp)
add_executable(L560 c3_hash/L560-m.cpp)
add_executable(L594 c3_hash/L594.cpp)

add_executable(L2 c4_linkedlist/L2-m.cpp)
add_executable(L19 c4_linkedlist/L19.cpp)
add_executable(L21 c4_linkedlist/L21.cpp)
add_executable(L23 c4_linkedlist/L23-h.cpp)
add_executable(L24 c4_linkedlist/L24.cpp)
add_executable(L61 c4_linkedlist/L61-m.cpp)
add_executable(L141 c4_linkedlist/L141.cpp)
add_executable(L142 c4_linkedlist/L142-m.cpp)
add_executable(L146 c4_linkedlist/L146-m.cpp)
add_executable(L148 c4_linkedlist/L148-m.cpp)
add_executable(L160 c4_linkedlist/L160.cpp)
add_executable(L203 c4_linkedlist/L203.cpp)
add_executable(L206 c4_linkedlist/L206.cpp)
add_executable(L237 c4_linkedlist/L237.cpp)

add_executable(queue_3 c5_stack_queue/queue_3.cpp)
add_executable(L20 c5_stack_queue/L20.cpp)
add_executable(L71 c5_stack_queue/L71-m.cpp)
add_executable(L84 c5_stack_queue/L84-h.cpp)
add_executable(L150 c5_stack_queue/L150-m.cpp)
add_executable(L155 c5_stack_queue/L155.cpp)
add_executable(L225 c5_stack_queue/L225.cpp)
add_executable(L227 c5_stack_queue/L227-m.cpp)
add_executable(L232 c5_stack_queue/L232.cpp)
add_executable(L394 c5_stack_queue/L394-m.cpp)
add_executable(L503 c5_stack_queue/L503-m.cpp)
add_executable(L557 c5_stack_queue/L557.cpp)
add_executable(L739 c5_stack_queue/L739-m.cpp)


add_executable(L215 c6_heap/L215-m.cpp)
add_executable(L295 c6_heap/L295-m.cpp)
add_executable(L347 c6_heap/L347-m.cpp)



add_executable(L101 c7_1_tree_recurrent/L101.cpp)
add_executable(L226 c7_1_tree_recurrent/L226.cpp)
add_executable(L104 c7_1_tree_recurrent/L104.cpp)
add_executable(L111 c7_1_tree_recurrent/L111.cpp)
add_executable(L110 c7_1_tree_recurrent/L110.cpp)
add_executable(L543 c7_1_tree_recurrent/L543.cpp)
add_executable(L687 c7_1_tree_recurrent/L687.cpp)
add_executable(L112 c7_1_tree_recurrent/L112.cpp)
add_executable(L113 c7_1_tree_recurrent/L113-m.cpp)
add_executable(L404 c7_1_tree_recurrent/L404.cpp)
add_executable(L437 c7_1_tree_recurrent/L437.cpp)
add_executable(L337 c7_1_tree_recurrent/L337-m.cpp)
add_executable(L572 c7_1_tree_recurrent/L572.cpp)
add_executable(L617 c7_1_tree_recurrent/L617.cpp)
add_executable(L671 c7_1_tree_recurrent/L671.cpp)

add_executable(L144 c7_2_tree_traversal/L144-m.cpp)
add_executable(L94 c7_2_tree_traversal/L94-m.cpp)
add_executable(L145 c7_2_tree_traversal/L145-h.cpp)
add_executable(L102 c7_2_tree_traversal/L102-m.cpp)
add_executable(L103 c7_2_tree_traversal/L103-m.cpp)
add_executable(L637 c7_2_tree_traversal/L637.cpp)
add_executable(L513 c7_2_tree_traversal/L513-m.cpp)


add_executable(L98 c7_3_tree_bst/L98-m.cpp)
add_executable(L108 c7_3_tree_bst/L108.cpp)
add_executable(L109 c7_3_tree_bst/L109-m.cpp)
add_executable(L230 c7_3_tree_bst/L230-m.cpp)
add_executable(L235 c7_3_tree_bst/L235.cpp)
add_executable(L236 c7_3_tree_bst/L236-m.cpp)
add_executable(L530 c7_3_tree_bst/L530.cpp)
add_executable(L538 c7_3_tree_bst/L538.cpp)
add_executable(L653 c7_3_tree_bst/L653.cpp)
add_executable(L501 c7_3_tree_bst/L501.cpp)
add_executable(L669 c7_3_tree_bst/L669.cpp)
add_executable(J36 c7_3_tree_bst/J36-m.cpp)


add_executable(L22-rc c7_4_tree_others/L22-m-rc.cpp)
add_executable(L22 c7_4_tree_others/L22-m.cpp)
add_executable(L114 c7_4_tree_others/L114-m.cpp)
add_executable(L124 c7_4_tree_others/L124-h.cpp)


add_executable(L208 c7_5_tree_trie/L208-m.cpp)
add_executable(L677 c7_5_tree_trie/L677-m.cpp)


add_executable(L17 c8_backtrack/L17-m.cpp)
add_executable(L31 c8_backtrack/L31-m.cpp)
add_executable(L37 c8_backtrack/L37-h.cpp)
add_executable(L39-rc c8_backtrack/L39-m-rc.cpp)
add_executable(L40 c8_backtrack/L40-m.cpp)
add_executable(L46 c8_backtrack/L46-m.cpp)
add_executable(L47 c8_backtrack/L47-m.cpp)
add_executable(L51 c8_backtrack/L51-h.cpp)
add_executable(L77 c8_backtrack/L77-m.cpp)
add_executable(L78 c8_backtrack/L78-m.cpp)
add_executable(L90 c8_backtrack/L90-m.cpp)
add_executable(L93 c8_backtrack/L93-m.cpp)
add_executable(L216 c8_backtrack/L216-m.cpp)

add_executable(c9_1 c9_dynamic_plan/dp_practice2.cpp)
add_executable(L5 c9_dynamic_plan/L5-m.cpp)
add_executable(L39-dp c9_dynamic_plan/L39-m-dp.cpp)
add_executable(L53 c9_dynamic_plan/L53.cpp)
add_executable(L62 c9_dynamic_plan/L62-m.cpp)
add_executable(L64 c9_dynamic_plan/L64-m.cpp)
add_executable(L70 c9_dynamic_plan/L70.cpp)
add_executable(L72 c9_dynamic_plan/L72-h.cpp)
add_executable(L85 c9_dynamic_plan/L85-h.cpp)
add_executable(L89 c9_dynamic_plan/L89-m.cpp)
add_executable(L91 c9_dynamic_plan/L91-m.cpp)
add_executable(L96 c9_dynamic_plan/L96-m.cpp)
add_executable(L139 c9_dynamic_plan/L139-m.cpp)
add_executable(L152 c9_dynamic_plan/L152-m.cpp)
add_executable(L198 c9_dynamic_plan/L198.cpp)
add_executable(L221 c9_dynamic_plan/L221-m.cpp)
add_executable(L279 c9_dynamic_plan/L279-m.cpp)
add_executable(L303 c9_dynamic_plan/L300.cpp)
add_executable(L300 c9_dynamic_plan/L303.cpp)
add_executable(L322 c9_dynamic_plan/L322-m.cpp)
add_executable(L338 c9_dynamic_plan/L338-m.cpp)
add_executable(L343 c9_dynamic_plan/L343.cpp)
add_executable(L376 c9_dynamic_plan/L376-m.cpp)
add_executable(L377 c9_dynamic_plan/L377-m.cpp)
add_executable(L413 c9_dynamic_plan/L413-m.cpp)
add_executable(L416 c9_dynamic_plan/L416-m.cpp)
add_executable(L494 c9_dynamic_plan/L494-m.cpp)
add_executable(L518 c9_dynamic_plan/L518-m.cpp)
add_executable(L583 c9_dynamic_plan/L583-m.cpp)
add_executable(L646 c9_dynamic_plan/L646-m.cpp)
add_executable(L650 c9_dynamic_plan/L650-m.cpp)
add_executable(L718 c9_dynamic_plan/L718-m.cpp)
add_executable(L1143 c9_dynamic_plan/L1143.cpp)

add_executable(L4 c10_erfen/L4-h.cpp)
add_executable(c10_1 c10_erfen/binary_search.cpp)
add_executable(L33 c10_erfen/L33-m.cpp)
add_executable(L34 c10_erfen/L34-m.cpp)
add_executable(L69 c10_erfen/L69.cpp)
add_executable(L153 c10_erfen/L153-m.cpp)
add_executable(L154 c10_erfen/L154-h.cpp)
add_executable(L162 c10_erfen/L162-m.cpp)
add_executable(L278 c10_erfen/L278.cpp)
add_executable(L378 c10_erfen/L378-m.cpp)
add_executable(L540 c10_erfen/L540-m.cpp)
add_executable(L704 c10_erfen/L704_fib_climbstairs.cpp)
add_executable(L744 c10_erfen/L744.cpp)

add_executable(L55 c11_greedy/L55-m.cpp)
add_executable(L56 c11_greedy/L56-m.cpp)
add_executable(L134 c11_greedy/L134-m.cpp)
add_executable(L406 c11_greedy/L406-m.cpp)
add_executable(L435 c11_greedy/L435-m.cpp)
add_executable(L452 c11_greedy/L452-m.cpp)
add_executable(L455 c11_greedy/L455.cpp)
add_executable(L581 c11_greedy/L581.cpp)
add_executable(L605 c11_greedy/L605.cpp)
add_executable(L665 c11_greedy/L665.cpp)
add_executable(L763 c11_greedy/L763-m.cpp)

add_executable(L7 c12_math_topic/L7.cpp)
add_executable(L9 c12_math_topic/L9.cpp)
add_executable(L43 c12_math_topic/L43.cpp)
add_executable(L66 c12_math_topic/L66.cpp)
add_executable(L171 c12_math_topic/L171.cpp)
add_executable(L172 c12_math_topic/L172-m.cpp)
add_executable(L179 c12_math_topic/L179-m.cpp)
add_executable(L202 c12_math_topic/L202.cpp)
add_executable(L204 c12_math_topic/L204.cpp)
add_executable(L292 c12_math_topic/L292.cpp)
add_executable(L326 c12_math_topic/L326.cpp)
add_executable(J62 c12_math_topic/J62.cpp)


add_executable(L3 c13_sliding_window/L3-m.cpp)
add_executable(L76 c13_sliding_window/L76-h.cpp)
add_executable(L209 c13_sliding_window/L209.cpp)
add_executable(L395 c13_sliding_window/L395-m.cpp)
add_executable(L438 c13_sliding_window/L438-m.cpp)
add_executable(L567 c13_sliding_window/L567-m.cpp)
add_executable(L904 c13_sliding_window/L904-m.cpp)

add_executable(L127 c14_graph_bfs/L127-m.cpp)
add_executable(L279-g c14_graph_bfs/L279-G.cpp)
add_executable(L1091 c14_graph_bfs/L1091-m.cpp)

add_executable(L79 c14_graph_dfs/L79-m.cpp)
add_executable(L130 c14_graph_dfs/L130-m.cpp)
add_executable(L200 c14_graph_dfs/L200-m.cpp)
add_executable(L417 c14_graph_dfs/L417-m.cpp)
add_executable(L547 c14_graph_dfs/L547-m.cpp)
add_executable(L695 c14_graph_dfs/L695-m.cpp)
add_executable(L785 c14_graph_dfs/L785-m.cpp)

add_executable(L207 c14_graph_toposort/L207-m.cpp)
add_executable(L210 c14_graph_toposort/L210-m.cpp)
add_executable(L684 c14_graph_toposort/L684-m.cpp)

add_executable(L8 c15_string_topic/L8.cpp)
add_executable(L14 c15_string_topic/L14.cpp)
add_executable(L151 c15_string_topic/L151.cpp)
add_executable(L205 c15_string_topic/L205.cpp)
add_executable(L485 c15_string_topic/L485.cpp)
add_executable(L696 c15_string_topic/L696.cpp)

add_executable(L11 c16_two_points/L11-m.cpp)
add_executable(L15 c16_two_points/L15-m.cpp)
add_executable(L16 c16_two_points/L16-m.cpp)
add_executable(L88 c16_two_points/L88.cpp)
add_executable(L125 c16_two_points/L125.cpp)
add_executable(L167 c16_two_points/L167.cpp)
add_executable(L283 c16_two_points/L283.cpp)
add_executable(L287 c16_two_points/L287-m.cpp)
add_executable(L334 c16_two_points/L334-m.cpp)
add_executable(L344 c16_two_points/L344.cpp)
add_executable(L345 c16_two_points/L345.cpp)
add_executable(L392 c16_two_points/L392.cpp)
add_executable(L524 c16_two_points/L524-m.cpp)
add_executable(L633 c16_two_points/L633.cpp)
add_executable(L680 c16_two_points/L680.cpp)

add_executable(L136 c17_bit_calculate/L136.cpp)
add_executable(L137 c17_bit_calculate/L137-m.cpp)
add_executable(L190 c17_bit_calculate/L190.cpp)
add_executable(L191 c17_bit_calculate/L191.cpp)
add_executable(L231 c17_bit_calculate/L231.cpp)
add_executable(L260 c17_bit_calculate/L260-m.cpp)
add_executable(L268-b c17_bit_calculate/L268.cpp)
add_executable(L371 c17_bit_calculate/L371-m.cpp)
add_executable(L461 c17_bit_calculate/L461.cpp)
add_executable(L476 c17_bit_calculate/L476.cpp)
add_executable(L693 c17_bit_calculate/L693.cpp)

add_executable(L121 c18_stock_topic/L121.cpp)
add_executable(L122 c18_stock_topic/L122.cpp)

add_executable(L48 c19_matrix/L48-m.cpp)
add_executable(L54 c19_matrix/L54-m.cpp)
add_executable(L59 c19_matrix/L59-m.cpp)
add_executable(L73 c19_matrix/L73-m.cpp)
add_executable(L240 c19_matrix/L240-m.cpp)
add_executable(L766 c19_matrix/L766.cpp)

add_executable(L131 c20_palindrome_string/L131-m.cpp)
add_executable(L647 c20_palindrome_string/L647-m.cpp)
