cmake_minimum_required(VERSION 3.12)
project(clion_p1)
set(CMAKE_CXX_STANDARD 14)
add_executable(clion_p1 main.cpp )

# 复杂度篇
include_directories(time_complexity_analysis)
add_executable(c1_1 time_complexity_analysis/c2_1.cpp)
add_executable(c1_2 time_complexity_analysis/MyAlgorithmTester.h time_complexity_analysis/MyUtil.h time_complexity_analysis/time_complexity_trail.cpp)
add_executable(c1_3 time_complexity_analysis/recurrent_complexity.cpp)
add_executable(c1_4 time_complexity_analysis/dynamic_array.cpp)

# 算法1-排序篇
add_executable(c2_1 algo_01_sort/sort-algorithms.cpp)
add_executable(c2_2 algo_01_sort/quick_sort_algorithm.cpp)
add_executable(c2_3 algo_01_sort/merge_sort_algorithm.cpp)
add_executable(L75 algo_01_sort/L75-m.cpp)
add_executable(L315 algo_01_sort/L315-h.cpp)
add_executable(L451 algo_01_sort/L451-m.cpp)
add_executable(L621 algo_01_sort/L621-m.cpp)

# 算法2-滑动窗口篇
add_executable(L3 algo_02_sliding_window/L3-m.cpp)
add_executable(L76 algo_02_sliding_window/L76-h.cpp)
add_executable(L209 algo_02_sliding_window/L209.cpp)
add_executable(L395 algo_02_sliding_window/L395-m.cpp)
add_executable(L438 algo_02_sliding_window/L438-m.cpp)
add_executable(L567 algo_02_sliding_window/L567-m.cpp)
add_executable(L904 algo_02_sliding_window/L904-m.cpp)

# 算法3-双指针篇
add_executable(L11 algo_03_two_points/L11-m.cpp)
add_executable(L15 algo_03_two_points/L15-m.cpp)
add_executable(L16 algo_03_two_points/L16-m.cpp)
add_executable(L88 algo_03_two_points/L88.cpp)
add_executable(L125 algo_03_two_points/L125.cpp)
add_executable(L167 algo_03_two_points/L167.cpp)
add_executable(L283 algo_03_two_points/L283.cpp)
add_executable(L287 algo_03_two_points/L287-m.cpp)
add_executable(L334 algo_03_two_points/L334-m.cpp)
add_executable(L344 algo_03_two_points/L344.cpp)
add_executable(L345 algo_03_two_points/L345.cpp)
add_executable(L392 algo_03_two_points/L392.cpp)
add_executable(L524 algo_03_two_points/L524-m.cpp)
add_executable(L633 algo_03_two_points/L633.cpp)
add_executable(L680 algo_03_two_points/L680.cpp)

# 算法4-二分法篇
add_executable(L4 algo_04_erfen/L4-h.cpp)
add_executable(c10_1 algo_04_erfen/binary_search.cpp)
add_executable(L33 algo_04_erfen/L33-m.cpp)
add_executable(L34 algo_04_erfen/L34-m.cpp)
add_executable(L69 algo_04_erfen/L69.cpp)
add_executable(L153 algo_04_erfen/L153-m.cpp)
add_executable(L154 algo_04_erfen/L154-h.cpp)
add_executable(L162 algo_04_erfen/L162-m.cpp)
add_executable(L278 algo_04_erfen/L278.cpp)
add_executable(L378 algo_04_erfen/L378-m.cpp)
add_executable(L540 algo_04_erfen/L540-m.cpp)
add_executable(L704 algo_04_erfen/L704_fib_climbstairs.cpp)
add_executable(L744 algo_04_erfen/L744.cpp)

# 算法5-动态规划篇
add_executable(L70 algo_05_dynamic_plan/dp_1_simple_recursion_formula/L70.cpp)

add_executable(L5 algo_05_dynamic_plan/dp_2_subsequence/L5-m.cpp)
add_executable(L53 algo_05_dynamic_plan/dp_2_subsequence/L53.cpp)
add_executable(L152 algo_05_dynamic_plan/dp_2_subsequence/L152-m.cpp)
add_executable(L303 algo_05_dynamic_plan/dp_2_subsequence/L300.cpp)
add_executable(L376 algo_05_dynamic_plan/dp_2_subsequence/L376-m.cpp)
add_executable(L646 algo_05_dynamic_plan/dp_2_subsequence/L646-m.cpp)
add_executable(L413 algo_05_dynamic_plan/dp_2_subsequence/L413-m.cpp)
add_executable(L300 algo_05_dynamic_plan/dp_2_subsequence/L303.cpp)

add_executable(L72 algo_05_dynamic_plan/dp_3_two_sequence/L72-h.cpp)
add_executable(L718 algo_05_dynamic_plan/dp_3_two_sequence/L718-m.cpp)
add_executable(L1143 algo_05_dynamic_plan/dp_3_two_sequence/L1143.cpp)
add_executable(L583 algo_05_dynamic_plan/dp_3_two_sequence/L583-m.cpp)

add_executable(L89 algo_05_dynamic_plan/dp_4_special_state_transition/L89-m.cpp)
add_executable(L338 algo_05_dynamic_plan/dp_4_special_state_transition/L338-m.cpp)
add_executable(L91 algo_05_dynamic_plan/dp_4_special_state_transition/L91-m.cpp)
add_executable(L650 algo_05_dynamic_plan/dp_4_special_state_transition/L650-m.cpp)
add_executable(L343 algo_05_dynamic_plan/dp_4_special_state_transition/L343.cpp)
add_executable(L279 algo_05_dynamic_plan/dp_4_special_state_transition/L279-m.cpp)
add_executable(L96 algo_05_dynamic_plan/dp_4_special_state_transition/L96-m.cpp)

add_executable(L198 algo_05_dynamic_plan/dp_5_rob/L198.cpp)
add_executable(L213 algo_05_dynamic_plan/dp_5_rob/L213-m.cpp)

add_executable(c9_1 algo_05_dynamic_plan/dp_6_knapsack_problem/dp_practice2.cpp)
add_executable(L416 algo_05_dynamic_plan/dp_6_knapsack_problem/L416-m.cpp)
add_executable(L494 algo_05_dynamic_plan/dp_6_knapsack_problem/L494-m.cpp)
add_executable(L474 algo_05_dynamic_plan/dp_6_knapsack_problem/L474-m.cpp)
add_executable(L139 algo_05_dynamic_plan/dp_6_knapsack_problem/L139-m.cpp)
add_executable(L322 algo_05_dynamic_plan/dp_6_knapsack_problem/L322-m.cpp)
add_executable(L377 algo_05_dynamic_plan/dp_6_knapsack_problem/L377-m.cpp)
add_executable(L518 algo_05_dynamic_plan/dp_6_knapsack_problem/L518-m.cpp)

add_executable(L62 algo_05_dynamic_plan/dp_7_matrix_path/L62-m.cpp)
add_executable(L64 algo_05_dynamic_plan/dp_7_matrix_path/L64-m.cpp)

add_executable(L85 algo_05_dynamic_plan/dp_8_max_matrix/L85-h.cpp)
add_executable(L221 algo_05_dynamic_plan/dp_8_max_matrix/L221-m.cpp)

add_executable(L121 algo_05_dynamic_plan/dp_9_stock/L121.cpp)
add_executable(L122 algo_05_dynamic_plan/dp_9_stock/L122.cpp)

# 算法6-回溯篇
add_executable(L22 algo_06_backtrack/L22-m.cpp)
add_executable(L17 algo_06_backtrack/L17-m.cpp)
add_executable(L31 algo_06_backtrack/L31-m.cpp)
add_executable(L37 algo_06_backtrack/L37-h.cpp)
add_executable(L39-rc algo_06_backtrack/L39-m-rc.cpp)
add_executable(L40 algo_06_backtrack/L40-m.cpp)
add_executable(L46 algo_06_backtrack/L46-m.cpp)
add_executable(L47 algo_06_backtrack/L47-m.cpp)
add_executable(L51 algo_06_backtrack/L51-h.cpp)
add_executable(L77 algo_06_backtrack/L77-m.cpp)
add_executable(L78 algo_06_backtrack/L78-m.cpp)
add_executable(L90 algo_06_backtrack/L90-m.cpp)
add_executable(L93 algo_06_backtrack/L93-m.cpp)
add_executable(L216 algo_06_backtrack/L216-m.cpp)

# 算法7-图的遍历篇
add_executable(L127 algo_08_graph/graph_1_bfs/L127-m.cpp)
add_executable(L279-g algo_08_graph/graph_1_bfs/L279-G.cpp)
add_executable(L1091 algo_08_graph/graph_1_bfs/L1091-m.cpp)

add_executable(L79 algo_08_graph/graph_2_dfs/L79-m.cpp)
add_executable(L130 algo_08_graph/graph_2_dfs/L130-m.cpp)
add_executable(L200 algo_08_graph/graph_2_dfs/L200-m.cpp)
add_executable(L417 algo_08_graph/graph_2_dfs/L417-m.cpp)
add_executable(L547 algo_08_graph/graph_2_dfs/L547-m.cpp)
add_executable(L695 algo_08_graph/graph_2_dfs/L695-m.cpp)
add_executable(L785 algo_08_graph/graph_3_toposort/L785-m.cpp)

add_executable(L207 algo_08_graph/graph_3_toposort/L207-m.cpp)
add_executable(L210 algo_08_graph/graph_3_toposort/L210-m.cpp)
add_executable(L684 algo_08_graph/graph_3_toposort/L684-m.cpp)

# 算法8-数学篇
add_executable(L7 algo_09_math/L7.cpp)
add_executable(L9 algo_09_math/L9.cpp)
add_executable(L43 algo_09_math/L43.cpp)
add_executable(L50 algo_09_math/L50-m.cpp)
add_executable(L66 algo_09_math/L66.cpp)
add_executable(L171 algo_09_math/L171.cpp)
add_executable(L172 algo_09_math/L172-m.cpp)
add_executable(L179 algo_09_math/L179-m.cpp)
add_executable(L202 algo_09_math/L202.cpp)
add_executable(L204 algo_09_math/L204.cpp)
add_executable(L292 algo_09_math/L292.cpp)
add_executable(L326 algo_09_math/L326.cpp)
add_executable(J62 algo_09_math/J62.cpp)

# 算法9-贪心篇
add_executable(L55 algo_10_greedy/L55-m.cpp)
add_executable(L56 algo_10_greedy/L56-m.cpp)
add_executable(L134 algo_10_greedy/L134-m.cpp)
add_executable(L406 algo_10_greedy/L406-m.cpp)
add_executable(L435 algo_10_greedy/L435-m.cpp)
add_executable(L452 algo_10_greedy/L452-m.cpp)
add_executable(L455 algo_10_greedy/L455.cpp)
add_executable(L581 algo_10_greedy/L581.cpp)
add_executable(L605 algo_10_greedy/L605.cpp)
add_executable(L665 algo_10_greedy/L665.cpp)
add_executable(L763 algo_10_greedy/L763-m.cpp)

# 算法10-分治篇
add_executable(L95-c algo_07_divide_and_conquer/L95-m-copy.cpp)
add_executable(L241 algo_07_divide_and_conquer/L241-m.cpp)
add_executable(L148-c algo_07_divide_and_conquer/L148-m-copy.cpp)

# 数据结构1-栈和队列篇
add_executable(queue_3 ds_1_stack_queue/queue_3.cpp)
add_executable(L20 ds_1_stack_queue/L20.cpp)
add_executable(L71 ds_1_stack_queue/L71-m.cpp)
add_executable(L84 ds_1_stack_queue/L84-h.cpp)
add_executable(L150 ds_1_stack_queue/L150-m.cpp)
add_executable(L155 ds_1_stack_queue/L155.cpp)
add_executable(L225 ds_1_stack_queue/L225.cpp)
add_executable(L227 ds_1_stack_queue/L227-m.cpp)
add_executable(L232 ds_1_stack_queue/L232.cpp)
add_executable(L394 ds_1_stack_queue/L394-m.cpp)
add_executable(L503 ds_1_stack_queue/L503-m.cpp)
add_executable(L557 ds_1_stack_queue/L557.cpp)
add_executable(L739 ds_1_stack_queue/L739-m.cpp)

# 数据结构2-堆篇
add_executable(L215 ds_2_heap/L215-m.cpp)
add_executable(L295 ds_2_heap/L295-m.cpp)
add_executable(L347 ds_2_heap/L347-m.cpp)
add_executable(L692 ds_2_heap/L692-m.cpp)

# 数据结构3-哈希表篇
add_executable(L1 ds_3_hash/L1.cpp)
add_executable(L13 ds_3_hash/L13.cpp)
add_executable(L36 ds_3_hash/L36-m.cpp)
add_executable(L38 ds_3_hash/L38.cpp)
add_executable(L49 ds_3_hash/L49-m.cpp)
add_executable(L128 ds_3_hash/L128-h.cpp)
add_executable(L217 ds_3_hash/L217.cpp)
add_executable(L219 ds_3_hash/L219.cpp)
add_executable(L220 ds_3_hash/L220-m.cpp)
add_executable(L242 ds_3_hash/L242.cpp)
add_executable(L349 ds_3_hash/L349.cpp)
add_executable(L350 ds_3_hash/L350.cpp)
add_executable(L387 ds_3_hash/L387.cpp)
add_executable(L409 ds_3_hash/L409.cpp)
add_executable(L412 ds_3_hash/L412.cpp)
add_executable(L454 ds_3_hash/L454.cpp)
add_executable(L560 ds_3_hash/L560-m.cpp)
add_executable(L594 ds_3_hash/L594.cpp)

# 数据结构4-链表篇
add_executable(L206 ds_4_linkedlist/linkedlist_2_inplace_operation/L206.cpp)
add_executable(L92 ds_4_linkedlist/linkedlist_2_inplace_operation/L92-m.cpp)
add_executable(L234 ds_4_linkedlist/linkedlist_2_inplace_operation/L234-m.cpp)
add_executable(L24 ds_4_linkedlist/linkedlist_2_inplace_operation/L24-m.cpp)
add_executable(L328 ds_4_linkedlist/linkedlist_2_inplace_operation/L328-m.cpp)
add_executable(L61 ds_4_linkedlist/linkedlist_2_inplace_operation/L61-m.cpp)
add_executable(L2 ds_4_linkedlist/linkedlist_1_vertical_calculation/L2-m.cpp)
add_executable(L445 ds_4_linkedlist/linkedlist_1_vertical_calculation/L445-m.cpp)
add_executable(L19 ds_4_linkedlist/linkedlist_3_two_points/L19-m.cpp)
add_executable(L83 ds_4_linkedlist/linkedlist_3_two_points/L83.cpp)
add_executable(L203 ds_4_linkedlist/linkedlist_3_two_points/L203.cpp)
add_executable(L237 ds_4_linkedlist/linkedlist_3_two_points/L237.cpp)
add_executable(L21 ds_4_linkedlist/linkedlist_3_two_points/L21.cpp)
add_executable(L23 ds_4_linkedlist/linkedlist_3_two_points/L23-h.cpp)
add_executable(L141 ds_4_linkedlist/linkedlist_3_two_points/L141.cpp)
add_executable(L142 ds_4_linkedlist/linkedlist_3_two_points/L142-m.cpp)
add_executable(L160 ds_4_linkedlist/linkedlist_3_two_points/L160.cpp)
add_executable(L146 ds_4_linkedlist/linkedlist_4_others/L146-m.cpp)
add_executable(L148 ds_4_linkedlist/linkedlist_4_others/L148-m.cpp)
add_executable(L138 ds_4_linkedlist/linkedlist_4_others/L138-m.cpp)
add_executable(L726 ds_4_linkedlist/linkedlist_4_others/L725-m.cpp)

# 数据结构5-树篇
add_executable(L101 ds_5_tree/tree_1_1_bool_recurrent/L101.cpp)
add_executable(L226 ds_5_tree/tree_1_3_node_recurrent/L226.cpp)
add_executable(L104 ds_5_tree/tree_1_2_inter_recurrent/L104.cpp)
add_executable(L111 ds_5_tree/tree_1_2_inter_recurrent/L111.cpp)
add_executable(L110 ds_5_tree/tree_1_2_inter_recurrent/L110.cpp)
add_executable(L543 ds_5_tree/tree_1_2_inter_recurrent/L543.cpp)
add_executable(L687 ds_5_tree/tree_1_2_inter_recurrent/L687.cpp)
add_executable(L112 ds_5_tree/tree_1_4_path_recurrent/L112.cpp)
add_executable(L113 ds_5_tree/tree_1_4_path_recurrent/L113-m.cpp)
add_executable(L404 ds_5_tree/tree_1_4_path_recurrent/L404.cpp)
add_executable(L437 ds_5_tree/tree_1_4_path_recurrent/L437.cpp)
add_executable(L337 ds_5_tree/tree_1_4_path_recurrent/L337-m.cpp)
add_executable(L572 ds_5_tree/tree_1_1_bool_recurrent/L572.cpp)
add_executable(L617 ds_5_tree/tree_1_3_node_recurrent/L617.cpp)
add_executable(L671 ds_5_tree/tree_1_3_node_recurrent/L671.cpp)

add_executable(L144 ds_5_tree/tree_2_traversal/L144-m.cpp)
add_executable(L94 ds_5_tree/tree_2_traversal/L94-m.cpp)
add_executable(L145 ds_5_tree/tree_2_traversal/L145-h.cpp)
add_executable(L102 ds_5_tree/tree_2_traversal/L102-m.cpp)
add_executable(L103 ds_5_tree/tree_2_traversal/L103-m.cpp)
add_executable(L637 ds_5_tree/tree_2_traversal/L637.cpp)
add_executable(L513 ds_5_tree/tree_2_traversal/L513-m.cpp)
add_executable(L429 ds_5_tree/tree_2_traversal/L429-m.cpp)
add_executable(L589 ds_5_tree/tree_2_traversal/L589.cpp)
add_executable(L590 ds_5_tree/tree_2_traversal/L590.cpp)
add_executable(L559 ds_5_tree/tree_1_2_inter_recurrent/L559.cpp)

add_executable(L95 ds_5_tree/tree_4_build_tree/L95-m.cpp)
add_executable(L98 ds_5_tree/tree_3_bst_property/L98-m.cpp)
add_executable(L108 ds_5_tree/tree_4_build_tree/L108.cpp)
add_executable(L109 ds_5_tree/tree_4_build_tree/L109-m.cpp)
add_executable(L230 ds_5_tree/tree_3_bst_property/L230-m.cpp)
add_executable(L235 ds_5_tree/tree_1_3_node_recurrent/L235.cpp)
add_executable(L236 ds_5_tree/tree_1_3_node_recurrent/L236-m.cpp)
add_executable(L530 ds_5_tree/tree_3_bst_property/L530.cpp)
add_executable(L538 ds_5_tree/tree_3_bst_property/L538.cpp)
add_executable(L653 ds_5_tree/tree_3_bst_property/L653.cpp)
add_executable(L501 ds_5_tree/tree_3_bst_property/L501.cpp)
add_executable(L669 ds_5_tree/tree_1_3_node_recurrent/L669.cpp)
add_executable(J36 ds_5_tree/tree_5_tree_and_linkedlist/J36-m.cpp)


add_executable(L105 ds_5_tree/tree_4_build_tree/L105-m.cpp)
add_executable(L106 ds_5_tree/tree_4_build_tree/L106-m.cpp)
add_executable(L114 ds_5_tree/tree_5_tree_and_linkedlist/L114-m.cpp)
add_executable(L116 ds_5_tree/tree_2_traversal/L116-m.cpp)
add_executable(L124 ds_5_tree/tree_1_4_path_recurrent/L124-h.cpp)
add_executable(L257 ds_5_tree/tree_1_4_path_recurrent/L257.cpp)
add_executable(L297 ds_5_tree/tree_2_traversal/L297-h.cpp)

add_executable(L208 ds_5_tree/tree_6_trie_tree/L208-m.cpp)
add_executable(L677 ds_5_tree/tree_6_trie_tree/L677-m.cpp)

# 数据结构6-字符串篇
add_executable(L8 ds_6_string/L8.cpp)
add_executable(L14 ds_6_string/L14.cpp)
add_executable(L151 ds_6_string/L151.cpp)
add_executable(L205 ds_6_string/L205.cpp)
add_executable(L485 ds_6_string/L485.cpp)
add_executable(L696 ds_6_string/L696.cpp)

add_executable(L131 ds_6_string/palindrome_string/L131-m.cpp)
add_executable(L647 ds_6_string/palindrome_string/L647-m.cpp)

# 数据结构7-数组原地篇
add_executable(L26 ds_7_array_inplace/L26.cpp)
add_executable(L169 ds_7_array_inplace/L169.cpp)
add_executable(L189 ds_7_array_inplace/L189.cpp)
add_executable(L238 ds_7_array_inplace/L238-m.cpp)
add_executable(L268 ds_7_array_inplace/L268.cpp)
add_executable(L380 ds_7_array_inplace/L380-m.cpp)
add_executable(L384 ds_7_array_inplace/L384-m.cpp)
add_executable(L448 ds_7_array_inplace/L448.cpp)
add_executable(L565 ds_7_array_inplace/L565-m.cpp)
add_executable(L645 ds_7_array_inplace/L645.cpp)
add_executable(L667 ds_7_array_inplace/L667-m.cpp)
add_executable(L697 ds_7_array_inplace/L697.cpp)
add_executable(L769 ds_7_array_inplace/L769-m.cpp)

# 数据结构8-二维矩阵篇
add_executable(L48 ds_8_matrix/L48-m.cpp)
add_executable(L54 ds_8_matrix/L54-m.cpp)
add_executable(L59 ds_8_matrix/L59-m.cpp)
add_executable(L73 ds_8_matrix/L73-m.cpp)
add_executable(L240 ds_8_matrix/L240-m.cpp)
add_executable(L766 ds_8_matrix/L766.cpp)

# 数据结构9-位运算篇
add_executable(L136 ds_9_bit_operation/L136.cpp)
add_executable(L137 ds_9_bit_operation/L137-m.cpp)
add_executable(L190 ds_9_bit_operation/L190.cpp)
add_executable(L191 ds_9_bit_operation/L191.cpp)
add_executable(L231 ds_9_bit_operation/L231.cpp)
add_executable(L260 ds_9_bit_operation/L260-m.cpp)
add_executable(L268-b ds_9_bit_operation/L268.cpp)
add_executable(L371 ds_9_bit_operation/L371-m.cpp)
add_executable(L461 ds_9_bit_operation/L461.cpp)
add_executable(L476 ds_9_bit_operation/L476.cpp)
add_executable(L693 ds_9_bit_operation/L693.cpp)

